// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Command Box Default 1`] = `
<div>
  <div
    className="MuiGrid-container-5 MuiGrid-spacing-xs-8-27 MuiGrid-align-items-xs-flex-end-15"
  >
    <div
      className="MuiGrid-item-6"
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-102"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
        />
      </svg>
    </div>
    <div
      className="MuiGrid-item-6"
    >
      <form>
        <div
          className="MuiFormControl-root-111"
        >
          <label
            className="MuiFormLabel-root-126 MuiInputLabel-root-115 MuiInputLabel-formControl-120 MuiInputLabel-animated-123"
            data-shrink={false}
            htmlFor="command-input"
          >
            Enter a command
          </label>
          <div
            className="MuiInputBase-root-146 MuiInput-root-133 MuiInput-underline-137 MuiInputBase-formControl-147 MuiInput-formControl-134"
            onClick={[Function]}
          >
            <input
              aria-invalid={false}
              className="MuiInputBase-input-156 MuiInput-input-141"
              disabled={false}
              id="command-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              type="text"
            />
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Storyshots Date Chip With End Time 1`] = `
<div
  className="Component-root-199"
>
  <div
    className="MuiChip-root-201 Component-chip-200"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-226 MuiChip-icon-217"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19.04 4.55l-1.42 1.42C16.07 4.74 14.12 4 12 4c-1.83 0-3.53.55-4.95 1.48l1.46 1.46C9.53 6.35 10.73 6 12 6c3.87 0 7 3.13 7 7 0 1.27-.35 2.47-.94 3.49l1.45 1.45C20.45 16.53 21 14.83 21 13c0-2.12-.74-4.07-1.97-5.61l1.42-1.42-1.41-1.42zM15 1H9v2h6V1zm-4 8.44l2 2V8h-2v1.44zM3.02 4L1.75 5.27 4.5 8.03C3.55 9.45 3 11.16 3 13c0 4.97 4.02 9 9 9 1.84 0 3.55-.55 4.98-1.5l2.5 2.5 1.27-1.27-7.71-7.71L3.02 4zM12 20c-3.87 0-7-3.13-7-7 0-1.28.35-2.48.95-3.52l9.56 9.56c-1.03.61-2.23.96-3.51.96z"
      />
    </svg>
    <span
      className="MuiChip-label-220"
    >
      8:25:17pm - 02/Sun/19
    </span>
  </div>
</div>
`;

exports[`Storyshots Date Chip With Start Time 1`] = `
<div
  className="Component-root-163"
>
  <div
    className="MuiChip-root-165 Component-chip-164"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-190 MuiChip-icon-181"
      focusable="false"
      role="presentation"
      viewBox="0 0 24 24"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
      />
    </svg>
    <span
      className="MuiChip-label-184"
    >
      8:25:17pm - 02/Sun/19
    </span>
  </div>
</div>
`;

exports[`Storyshots Incident App Bar Default 1`] = `
<div
  className="Component-root-235"
>
  <header
    className="MuiPaper-root-246 MuiPaper-elevation4-252 MuiAppBar-root-237 MuiAppBar-positionStatic-241 MuiAppBar-colorPrimary-244 Component-root-235"
  >
    <div
      className="MuiToolbar-root-273 MuiToolbar-regular-275 MuiToolbar-gutters-274"
    >
      <h5
        className="MuiTypography-root-277 MuiTypography-h5-293 MuiTypography-colorInherit-306 Component-grow-236"
      />
    </div>
  </header>
</div>
`;

exports[`Storyshots Incident App Bar With Title 1`] = `
<div
  className="Component-root-313"
>
  <header
    className="MuiPaper-root-324 MuiPaper-elevation4-330 MuiAppBar-root-315 MuiAppBar-positionStatic-319 MuiAppBar-colorPrimary-322 Component-root-313"
  >
    <div
      className="MuiToolbar-root-351 MuiToolbar-regular-353 MuiToolbar-gutters-352"
    >
      <h5
        className="MuiTypography-root-355 MuiTypography-h5-371 MuiTypography-colorInherit-384 Component-grow-314"
      >
        Incidents for Sean!!
      </h5>
    </div>
  </header>
</div>
`;

exports[`Storyshots Incident App Bar With children 1`] = `
<div
  className="Component-root-391"
>
  <header
    className="MuiPaper-root-402 MuiPaper-elevation4-408 MuiAppBar-root-393 MuiAppBar-positionStatic-397 MuiAppBar-colorPrimary-400 Component-root-391"
  >
    <div
      className="MuiToolbar-root-429 MuiToolbar-regular-431 MuiToolbar-gutters-430"
    >
      <h5
        className="MuiTypography-root-433 MuiTypography-h5-449 MuiTypography-colorInherit-462 Component-grow-392"
      />
      <div>
        I'm a child node!!
      </div>
    </div>
  </header>
</div>
`;

exports[`Storyshots Incident Card With Children 1`] = `
<li
  className="MuiGridListTile-root-644"
>
  <div
    className="MuiGridListTile-tile-645"
  >
    <div
      className="MuiPaper-root-649 MuiPaper-elevation1-652 MuiPaper-rounded-650 MuiCard-root-648 Component-card-639"
    >
      <div
        className="MuiCardHeader-root-676"
      >
        <div
          className="MuiCardHeader-avatar-677"
        >
          <div
            aria-label="Incident"
            className="MuiAvatar-root-682 MuiAvatar-colorDefault-683 Component-avatar-643"
          >
            I
          </div>
        </div>
        <div
          className="MuiCardHeader-content-679"
        >
          <span
            className="MuiTypography-root-685 MuiTypography-body2-693 MuiCardHeader-title-680"
          >
            Incident Name
          </span>
          <span
            className="MuiTypography-root-685 MuiTypography-body2-693 MuiTypography-colorTextSecondary-718 MuiCardHeader-subheader-681"
          >
            Incident Status: In Progress
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root-721 Component-media-641"
        style={
          Object {
            "backgroundImage": "url(\\"https://image.tmdb.org/t/p/original/mc7MubOLcIw3MDvnuQFrO9psfCa.jpg\\")",
          }
        }
        title="Incident Name"
      />
      <div
        className="MuiCardContent-root-723"
      >
        <div
          className="Component-root-724"
        >
          <div
            className="MuiChip-root-726 Component-chip-725"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={-1}
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-751 MuiChip-icon-742"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M15 1H9v2h6V1zm-4 13h2V8h-2v6zm8.03-6.61l1.42-1.42c-.43-.51-.9-.99-1.41-1.41l-1.42 1.42C16.07 4.74 14.12 4 12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9 9-4.03 9-9c0-2.12-.74-4.07-1.97-5.61zM12 20c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"
              />
            </svg>
            <span
              className="MuiChip-label-745"
            >
              8:25:19pm - 02/Sun/19
            </span>
          </div>
        </div>
        <div
          className="Component-root-724"
        >
          <div
            className="MuiChip-root-726 Component-chip-725"
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            tabIndex={-1}
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-751 MuiChip-icon-742"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0zm0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M19.04 4.55l-1.42 1.42C16.07 4.74 14.12 4 12 4c-1.83 0-3.53.55-4.95 1.48l1.46 1.46C9.53 6.35 10.73 6 12 6c3.87 0 7 3.13 7 7 0 1.27-.35 2.47-.94 3.49l1.45 1.45C20.45 16.53 21 14.83 21 13c0-2.12-.74-4.07-1.97-5.61l1.42-1.42-1.41-1.42zM15 1H9v2h6V1zm-4 8.44l2 2V8h-2v1.44zM3.02 4L1.75 5.27 4.5 8.03C3.55 9.45 3 11.16 3 13c0 4.97 4.02 9 9 9 1.84 0 3.55-.55 4.98-1.5l2.5 2.5 1.27-1.27-7.71-7.71L3.02 4zM12 20c-3.87 0-7-3.13-7-7 0-1.28.35-2.48.95-3.52l9.56 9.56c-1.03.61-2.23.96-3.51.96z"
              />
            </svg>
            <span
              className="MuiChip-label-745"
            >
              8:25:19pm - 02/Sun/19
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</li>
`;

exports[`Storyshots Incident Card With Title 1`] = `
<li
  className="MuiGridListTile-root-474"
>
  <div
    className="MuiGridListTile-tile-475"
  >
    <div
      className="MuiPaper-root-479 MuiPaper-elevation1-482 MuiPaper-rounded-480 MuiCard-root-478 Component-card-469"
    >
      <div
        className="MuiCardHeader-root-506"
      >
        <div
          className="MuiCardHeader-avatar-507"
        >
          <div
            aria-label="Incident"
            className="MuiAvatar-root-512 MuiAvatar-colorDefault-513 Component-avatar-473"
          >
            I
          </div>
        </div>
        <div
          className="MuiCardHeader-content-509"
        >
          <span
            className="MuiTypography-root-515 MuiTypography-body2-523 MuiCardHeader-title-510"
          >
            Incident Name
          </span>
          <span
            className="MuiTypography-root-515 MuiTypography-body2-523 MuiTypography-colorTextSecondary-548 MuiCardHeader-subheader-511"
          >
            Incident Status: In Progress
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root-551 Component-media-471"
        style={
          Object {
            "backgroundImage": "url(\\"https://image.tmdb.org/t/p/original/mc7MubOLcIw3MDvnuQFrO9psfCa.jpg\\")",
          }
        }
        title="Incident Name"
      />
      <div
        className="MuiCardContent-root-553"
      />
    </div>
  </div>
</li>
`;

exports[`Storyshots Incident Card With img 1`] = `
<li
  className="MuiGridListTile-root-559"
>
  <div
    className="MuiGridListTile-tile-560"
  >
    <div
      className="MuiPaper-root-564 MuiPaper-elevation1-567 MuiPaper-rounded-565 MuiCard-root-563 Component-card-554"
    >
      <div
        className="MuiCardHeader-root-591"
      >
        <div
          className="MuiCardHeader-avatar-592"
        >
          <div
            aria-label="Incident"
            className="MuiAvatar-root-597 MuiAvatar-colorDefault-598 Component-avatar-558"
          >
            I
          </div>
        </div>
        <div
          className="MuiCardHeader-content-594"
        >
          <span
            className="MuiTypography-root-600 MuiTypography-body2-608 MuiCardHeader-title-595"
          >
            Incident Name
          </span>
          <span
            className="MuiTypography-root-600 MuiTypography-body2-608 MuiTypography-colorTextSecondary-633 MuiCardHeader-subheader-596"
          >
            Incident Status: In Progress
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root-636 Component-media-556"
        style={
          Object {
            "backgroundImage": "url(\\"https://image.tmdb.org/t/p/original/mc7MubOLcIw3MDvnuQFrO9psfCa.jpg\\")",
          }
        }
        title="Incident Name"
      />
      <div
        className="MuiCardContent-root-638"
      />
    </div>
  </div>
</li>
`;
